[package]
name = "puzuzu"
version = "0.1.0"
authors = ["Ben Berman <ben.m.berman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
structure = "0.1.2"
byteorder = "1.4.3"
encoding = "0.2.33"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "wapo"
