[package]
name = "puzuzu"
version = "0.1.1"
authors = ["Ben Berman <ben.m.berman@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A crossword puz file parser"
homepage = "https://github.com/rivertam/puzuzu"
documentation = "https://github.com/rivertam/puzuzu"
repository = "https://github.com/rivertam/puzuzu"
readme = "../README.md"
keywords = ["crossword", "puz", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
byteorder = "1.4.3"
encoding = "0.2.33"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
